fixing main block z-index

--- a/css/main.less
+++ b/css/main.less
@@ -174,7 +174,7 @@ body {
   position: relative;
   padding-top: 219px;
   padding-bottom: 205px;
-  z-index: -2;
+  z-index: 0;
   .main-container {
     .container();
     display: flex;
